fixed title alignment issue

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav li {
     font-family: "Nunito", "Helvetica", sans-serif;
     letter-spacing: 3px;
     align-self: flex-start;
-    text-align: center;
+    text-align: left;
 }
 
 nav a {
@@ -194,6 +194,7 @@ footer p {
         font-size: 28px;
         flex-grow: 0;
         align-self: center;
+        text-align: center;
     }
 
     nav a {
